--- a/src/elements/guuey-date-input/dependencies.html
+++ b/src/elements/guuey-date-input/dependencies.html
@@ -4,3 +4,5 @@
 <link rel="import" href="../../../bower_components/paper-date-picker/paper-date-picker.html" />
 <link rel="import" href="../../../bower_components/paper-input/paper-input.html" />
 <link rel="import" href="../../../bower_components/paper-date-picker/paper-date-picker-dialog-style.html" />
+<link rel="import" href="../../../bower_components/paper-button/paper-button.html" />
+<link rel="import" href="../../../bower_components/app-storage/app-indexeddb-mirror/app-indexeddb-mirror.html" />
