--- a/src/pages/care-plan/su-goals/dependencies.html
+++ b/src/pages/care-plan/su-goals/dependencies.html
@@ -6,13 +6,14 @@
 <link rel="import" href="../../../../bower_components/paper-fab/paper-fab.html" />
 <link rel="import" href="../../../../bower_components/paper-input/paper-input.html" />
 <link rel="import" href="../../../../bower_components/paper-card/paper-card.html" />
-<link rel="import" href="../../../elements/su-header/su-header.html" />
 <link rel="import" href="../../../../bower_components/paper-icon-button/paper-icon-button.html" />
 <link rel="import" href="../../../../bower_components/vaadin-combo-box/vaadin-combo-box.html" />
-<link rel="import" href="../../../elements/guuey-date-input/guuey-date-input.html" />
 <link rel="import" href="../../../../bower_components/paper-checkbox/paper-checkbox.html" />
 <link rel="import" href="../../../../bower_components/iron-icon/iron-icon.html" />
 <link rel="import" href="../../../../bower_components/iron-icons/iron-icons.html" />
 <link rel="import" href="../../../../bower_components/iron-icons/editor-icons.html" />
 <link rel="import" href="../../../../bower_components/app-layout/app-grid/app-grid-style.html" />
 <link rel="import" href="../../../../bower_components/iron-media-query/iron-media-query.html" />
+<link rel="import" href="../../../../bower_components/app-storage/app-indexeddb-mirror/app-indexeddb-mirror.html" />
+<link rel="import" href="../../../elements/guuey-date-input/guuey-date-input.html" />
+<link rel="import" href="../../../elements/su-header/su-header.html" />
