--- a/src/pages/care-plan/su-medication/su-medication.html
+++ b/src/pages/care-plan/su-medication/su-medication.html
@@ -7,12 +7,20 @@
       id="medDB"
       app-name="main">
     </firebase-document>
+
     <firebase-document
       id="medsDB"
-      path="homes/{{home}}/patients/{{patient}}/medicationOutline"
-      data="{{medsData}}"
+      path="homes/[[home]]/patients/[[patient]]/medicationOutline"
+      data="{{medsDataLive}}"
       app-name="main">
     </firebase-document>
+
+    <app-indexeddb-mirror
+      key="medsDB|[[patient]]"
+      data="{{medsDataLive}}"
+      persisted-data="{{medsData}}"
+      worker-url="../../../../bower_components/app-storage/app-indexeddb-mirror/app-indexeddb-mirror-worker.js">
+    </app-indexeddb-mirror>
 
     <iron-media-query
       query="(max-width:1000px)"
@@ -159,7 +167,7 @@
         <div class="timeSection">
 
           <span>
-            Time: {{newMed.time}}
+            Time: [[newMed.time]]
           </span>
 
           <paper-button on-tap="timeDialog">edit time</paper-button>
@@ -208,7 +216,7 @@
       <div class="timeSection">
 
         <span>
-          Time: {{newMedEdit.time}}
+          Time: [[newMedEdit.time]]
         </span>
 
         <paper-button on-tap="editTimeDialog">edit time</paper-button>
@@ -253,8 +261,8 @@
     <paper-card>
       <su-header
       page="Medication Outline"
-      home="{{home}}"
-      patient="{{patient}}">
+      home="[[home]]"
+      patient="[[patient]]">
       </su-header>
 
       <div class="mainContainer">
