--- a/src/pages/care-plan/su-profile/dependencies.html
+++ b/src/pages/care-plan/su-profile/dependencies.html
@@ -8,6 +8,7 @@
 <link rel="import" href="../../../../bower_components/paper-input/paper-input.html" />
 <link rel="import" href="../../../../bower_components/vaadin-combo-box/vaadin-combo-box.html" />
 <link rel="import" href="../../../../bower_components/app-layout/app-grid/app-grid-style.html" />
+<link rel="import" href="../../../../bower_components/paper-time-picker/paper-time-picker-dialog-style.html" />
 <link rel="import" href="../../../../bower_components/iron-media-query/iron-media-query.html" />
 <link rel="import" href="../../../../bower_components/app-storage/app-indexeddb-mirror/app-indexeddb-mirror.html" />
 <link rel="import" href="../../../elements/su-header/su-header.html" />
